--- a/Lab 2 Server Side Form/css/style.css
+++ b/Lab 2 Server Side Form/css/style.css
@@ -1,22 +1,35 @@
 body{
 	width: 80%;
 	background-color: #c2c2c2;
-	color: #666;
-	margin: 10% 0;
+	margin: 0 10%;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 h1{
-	color: #000;
+	color: #804100;
 }
 form{
 	background-color: #fff;
+	color: #09C;
+	padding: 0 20px 20px 20px;
+	border: 1px solid #000;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
 }
 th{
-	background-color: #999;
-	color: #fff;
+	background-color: #804100;
+	color: #c2c2c2;
+	padding: 5px 10px;
+}
+td{
+	color: #09C;
+	padding-left: 10px;
 }
 table{
-	border: 1px solid #000;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
+	background-color: #fff;
+	border-collapse: collapse;
+	border-spacing: 0;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
 }
